--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/node-api",
-  "version": "0.15.0",
+  "version": "0.16.0-1",
   "description": "logion API",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -10,6 +10,11 @@
       "types": "./dist/types/index.d.ts",
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js"
+    },
+    "./interfaces/definitions": {
+      "types": "./dist/types/interfaces/definitions.d.ts",
+      "import": "./dist/esm/interfaces/definitions.js",
+      "require": "./dist/cjs/interfaces/definitions.js"
     }
   },
   "packageManager": "yarn@3.2.0",
